# controllers/course.js
@@ -8,13 +8,20 @@ const AppErrorClass = require("../utils/appErrorClass");
  * @param {Object} res - The response object.
  */
 const getAll = async (req, res, next) => {
-  const result = await databaseModel.find().populate('certificate degree');
+  try {
+    const result = await databaseModel.find()
+      .populate('certificate', 'name')
+      .populate('degree', 'name');
 
-  if (!result) {
-    return next(new AppErrorClass("No courses found", 404));
+    if (!result || result.length === 0) {
+      return next(new AppErrorClass("No courses found", 404));
+    }
+
+    res.status(200).json(result);
+  } catch (error) {
+    console.error(error); // Add logging
+    next(error);
   }
-
-  res.status(200).json(result);
 };
 
 /**
@@ -23,14 +30,22 @@ const getAll = async (req, res, next) => {
  * @param {Object} res - The response object.
  */
 const getSingle = async (req, res, next) => {
-  const courseId = req.params._id;
-  const result = await databaseModel.findOne({ _id: courseId });
+  try {
+    const courseId = req.params._id;
+    console.log(`Fetching course with ID: ${courseId}`); // Log course ID
+    const result = await databaseModel.findOne({ _id: courseId })
+      .populate('certificate', 'name')
+      .populate('degree', 'name');
 
-  if (!result) {
-    return next(new AppErrorClass("No course found with that ID", 404));
+    if (!result) {
+      return next(new AppErrorClass("No course found with that ID", 404));
+    }
+
+    res.status(200).json(result);
+  } catch (error) {
+    console.error(error); // Add logging
+    next(error);
   }
-
-  res.status(200).json(result);
 };
 
 /**
@@ -39,23 +54,26 @@ const getSingle = async (req, res, next) => {
  * @param {Object} res - The response object.
  */
 const createCourse = async (req, res, next) => {
-  const result = await databaseModel.create({
-    _id: req.params._id,
-    name: req.body.name,
-    code: req.body.code,
-    description: req.body.description,
-    credit: req.body.credit,
-    certificate: req.body.certificate,
-    degree: req.body.degree,
-    courseType: req.body.type
+  try {
+    const result = await databaseModel.create({
+      _id: req.body._id,
+      name: req.body.name,
+      code: req.body.code,
+      description: req.body.description,
+      credit: req.body.credit,
+      certificate: req.body.certificate,
+      degree: req.body.degree,
+      courseType: req.body.courseType // Fixed here
+    });
 
-  });
+    if (!result) {
+      return next(new AppErrorClass("Failed to create course", 400));
+    }
 
-  if (!result) {
-    return next(new AppErrorClass("No course found to create", 404));
+    res.status(201).json(result);
+  } catch (error) {
+    next(error);
   }
-
-  res.status(201).json(result);
 };
 
 /**
@@ -64,26 +82,30 @@ const createCourse = async (req, res, next) => {
  * @param {Object} res - The response object.
  */
 const updateCourse = async (req, res, next) => {
-  const courseId = req.params._id;
-  const newDoc = {};
+  try {
+    const courseId = req.params._id;
+    const newDoc = {};
 
-  if (req.body.name != undefined) newDoc.name = req.body.name;
-  if (req.body.code !== undefined) newDoc.code = req.body.code;
-  if (req.body.description !== undefined) newDoc.description = req.body.description;
-  if (req.body.credit !== undefined) newDoc.credit = req.body.credit;
-  if (req.body.certificate !== undefined) newDoc.certificate = req.body.certificate;
-  if (req.body.degree !== undefined) newDoc.degree = req.body.degree;
-  if (req.body.type !== undefined) newDoc.courseType = req.body.type;
+    if (req.body.name != undefined) newDoc.name = req.body.name;
+    if (req.body.code !== undefined) newDoc.code = req.body.code;
+    if (req.body.description !== undefined) newDoc.description = req.body.description;
+    if (req.body.credit !== undefined) newDoc.credit = req.body.credit;
+    if (req.body.certificate !== undefined) newDoc.certificate = req.body.certificate;
+    if (req.body.degree !== undefined) newDoc.degree = req.body.degree;
+    if (req.body.courseType !== undefined) newDoc.courseType = req.body.courseType; // Fixed here
 
-  const result = await databaseModel.updateOne(
-    { _id: courseId },
-    { $set: newDoc }
-  );
+    const result = await databaseModel.updateOne(
+      { _id: courseId },
+      { $set: newDoc }
+    );
 
-  if (result.nModified === 0) {
-    return next(new AppErrorClass("No course found to update", 404));
-  } else {
+    if (result.nModified === 0) {
+      return next(new AppErrorClass("No course found to update", 404));
+    }
+
     res.status(200).json(result);
+  } catch (error) {
+    next(error);
   }
 };
 
@@ -93,14 +115,18 @@ const updateCourse = async (req, res, next) => {
  * @param {Object} res - The response object.
  */
 const deleteCourse = async (req, res, next) => {
-  const courseId = req.params._id;
-  const result = await databaseModel.deleteOne({ _id: courseId });
+  try {
+    const courseId = req.params._id;
+    const result = await databaseModel.deleteOne({ _id: courseId });
 
-  if (!result.deletedCount) {
-    throw new AppErrorClass("No course found to delete", 404);
+    if (!result.deletedCount) {
+      return next(new AppErrorClass("No course found to delete", 404));
+    }
+
+    res.status(204).json({ message: "Course deleted successfully" });
+  } catch (error) {
+    next(error);
   }
-
-  res.status(204).json({ message: "course deleted successfully", result });
 };
 
 // Exporting the CRUD functions
