# controllers/userController.js
@@ -101,7 +101,14 @@ const updateUser = async (req, res, next) => {
   //# swagger.tags = ['User']
 
   const userId = req.params.id;
-  const newDoc = { ...req.body };
+  // const newDoc = { ...req.body };
+  const newDoc = {
+    _id: req.body._id,
+    username: req.body.username,
+    email: req.body.email,
+    password: req.body.password,
+    role: req.body.role
+  }
 
   console.log("req.body", req.body);
   console.log("newDoc", newDoc);
