# routers/course.js
@@ -15,7 +15,7 @@ router.get("/", courseController.getAll);
  * Calls courseController.getSingle function.
  * @param {string} id - The ID of the course to retrieve.
  */
-router.get("/:id", courseController.getSingle);
+router.get("/:_id", courseController.getSingle);
 
 /**
  * Route to create a new course.
@@ -32,7 +32,7 @@ router.post("/create",  isAuthenticated, courseController.createCourse);
  * @param {string} id - The ID of the course to update.
  * Expects JSON body with updated course details.
  */
-router.put("/update/:id",  isAuthenticated, courseController.updateCourse);
+router.put("/update/:_id",  isAuthenticated, courseController.updateCourse);
 
 /**
  * Route to delete a course by ID.
@@ -40,6 +40,6 @@ router.put("/update/:id",  isAuthenticated, courseController.updateCourse);
  * Calls courseController.deleteCourse function.
  * @param {string} id - The ID of the course to delete.
  */
-router.delete("/delete/:id", isAuthenticated,  courseController.deleteCourse);
+router.delete("/delete/:_id", isAuthenticated,  courseController.deleteCourse);
 
 module.exports = router;
